5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1644_1055.log
== TEST (2019-04-14 21:31:12) 
-- CODE:
from math import*



-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:36:05) 
-- CODE:
from math import*

v = float(input("Velocidade: "))
a = float(input("Angulo: "))
g = 9.8

distancia = ((v ** 2) * sen(2 * a)) / g

print (distancia)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    distancia = ((v ** 2) * sen(2 * a)) / g
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:36:42) 
-- CODE:
from math import*

v = float(input("Velocidade: "))
a = float(input("Angulo: "))
g = 9.8

distancia = ((v ** 2) * sin(2 * a)) / g

print (distancia)

-- OUTPUT:
1.1923595072005144
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:37:34) 
-- CODE:
from math import*

v = float(input("Velocidade: "))
a = radians(input("Angulo: "))
g = 9.8

distancia = ((v ** 2) * sin(2 * a)) / g

print (distancia)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = radians(input())
TypeError: must be real number, not str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:41:18) 
-- CODE:
from math import*

v = float(input("Velocidade: "))
a = float(input("Angulo: "))
g = 9.8
tolerancia = 0.1

distancia = ((v ** 2) * sin(2 * radians(a)) / g
resultado = abs(distancia - tolerancia)

print (resultado)

-- ERROR:
File "XXXX", line 9
    resultado = abs(distancia - tolerancia)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:46:31) 
-- CODE:
from math import*

v = float(input("Velocidade: "))
a = float(input("Angulo: "))
distanciaD = float(input("DIstancia entre passaro e o porco: "))
g = 9.8
tolerancia = 0.1

distanciaR = ((v ** 2) * sin(2 * radians(a)) / g
resultado = abs(distanciaD - distanciaR)

print (resultado)

-- ERROR:
File "XXXX", line 10
    resultado = abs(distanciaD - distanciaR)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:47:02) 
-- CODE:
from import math*

v = float(input("Velocidade: "))
a = float(input("Angulo: "))
distanciaD = float(input("DIstancia entre passaro e o porco: "))
g = 9.8
tolerancia = 0.1

distanciaR = ((v ** 2) * sin(2 * radians(a)) / g
resultado = abs(distanciaD - distanciaR)

print (resultado)

-- ERROR:
File "XXXX", line 1
    from import math*
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:47:21) 
-- CODE:
from math import

v = float(input("Velocidade: "))
a = float(input("Angulo: "))
distanciaD = float(input("DIstancia entre passaro e o porco: "))
g = 9.8
tolerancia = 0.1

distanciaR = ((v ** 2) * sin(2 * radians(a)) / g
resultado = abs(distanciaD - distanciaR)

print (resultado)

-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:47:36) 
-- CODE:
from math import *

v = float(input("Velocidade: "))
a = float(input("Angulo: "))
distanciaD = float(input("DIstancia entre passaro e o porco: "))
g = 9.8
tolerancia = 0.1

distanciaR = ((v ** 2) * sin(2 * radians(a)) / g
resultado = abs(distanciaD - distanciaR)

print (resultado)

-- ERROR:
File "XXXX", line 10
    resultado = abs(distanciaD - distanciaR)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:48:01) 
-- CODE:
from math import *

v = float(input("Velocidade: "))
a = float(input("Angulo: "))
distanciaD = float(input("DIstancia entre passaro e o porco: "))
g = 9.8
tolerancia = 0.1

distanciaR = ((v ** 2) * sin(2 * radians(a)) / g
resultado = abs((distanciaD - distanciaR))

print (resultado)

-- ERROR:
File "XXXX", line 10
    resultado = abs((distanciaD - distanciaR))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:48:54) 
-- CODE:
from math import *

v = float(input("Velocidade: "))
a = float(input("Angulo: "))
distanciaD = float(input("DIstancia entre passaro e o porco: "))
g = 9.8
tolerancia = 0.1

distanciaR = ((v ** 2) * sin(2 * radians(a)) / g
resultado = abs((distanciaD - distanciaR))

print (resultado)

-- ERROR:
File "XXXX", line 10
    resultado = abs((distanciaD - distanciaR))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:50:10) 
-- CODE:
from math import *

v = float(input("Velocidade: "))
a = float(input("Angulo: "))
distanciaD = float(input("DIstancia entre passaro e o porco: "))
g = 9.8
tolerancia = 0.1

distanciaR = ((v ** 2) * sin(2 * radians(a)) / g
x = (distanciaD - distanciaR)
resultado = abs(x)

print (resultado)

-- ERROR:
File "XXXX", line 10
    x = (distanciaD - distanciaR)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:04:31) 
-- CODE:
from math import *

v = float(input("Velocidade: "))
a = radians(float(input("Angulo: "))
distanciaD = float(input("DIstancia entre passaro e o porco: "))
g = 9.8

distanciaR = ((v ** 2) * sin(2 * a) / g
				  
if (abs(distanciaR - distanciaD) <= 0.1):
				  print ("sim")
else:
				  print("nao")
-- EXECUTION TIME:
0.154556
-- ERROR:
  File "/home/codebench/codes/1644/1055/main.py", line 5
    distanciaD = float(input())
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:04:46) 
-- CODE:
from math import *

v = float(input("Velocidade: "))
a = radians(float(input("Angulo: "))
distanciaD = float(input("DIstancia entre passaro e o porco: "))
g = 9.8

distanciaR = ((v ** 2) * sin(2 * a) / g
				  
if (abs(distanciaR - distanciaD) <= 0.1):
				  print ("sim")
else:
				  print("nao")
-- ERROR:
File "XXXX", line 5
    distanciaD = float(input())
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:05:38) 
-- CODE:
from math import *

v = float(input("Velocidade: "))
a = radians(float(input("Angulo: "))
D = float(input("DIstancia entre passaro e o porco: "))
g = 9.8

R = ((v ** 2) * sin(2 * a) / g
				  
if (abs(R - D) <= 0.1):
				  print ("sim")
else:
				  print("nao")
-- ERROR:
File "XXXX", line 5
    D = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:09:41) 
-- CODE:
from math import *

v = float(input("Velocidade: "))
a = radians(float(input("Angulo: "))
d = float(input("Distancia entre passaro e o porco: "))
g = 9.8

R = ((v ** 2) * sin(2 * a) / g
				  
if (abs(R - d) <= 0.1):
				  print ("sim")
else:
				  print("nao")
-- ERROR:
File "XXXX", line 5
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:10:52) 
-- CODE:
from math import *

v = float(input("Velocidade: "))
a = radians(float(input("Angulo: "))
D = float(input("Distancia entre passaroe porco: "))
g = 9.8

R = ((v ** 2) * sin(2 * a) / g
				  
if (abs(R - D) <= 0.1):
				  print ("sim")
else:
				  print("nao")
-- ERROR:
File "XXXX", line 5
    D = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:18:12) 
-- CODE:
from math import *

v = float(input("Velocidade inicial: "))

a = radians(float(input("Angulo co o solo: ")))

D = float(input("Distancia entre passaro e porco: "))

g = 9.8

R = ((v ** 2) * sin(2 * a)) / g

if (abs(R - D) <=0.1):
print ("Sim")
else:
print ("Nao")
-- ERROR:
File "XXXX", line 14
    print ("Sim")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:18:39) 
-- CODE:
from math import *

v = float(input("Velocidade inicial: "))

a = radians(float(input("Angulo co o solo: ")))

D = float(input("Distancia entre passaro e porco: "))

g = 9.8

R = ((v ** 2) * sin(2 * a)) / g

if (abs(R - D) <=0.1):
	print ("Sim")
else:
	print ("Nao")
-- OUTPUT:
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:19:24) 
-- CODE:
from math import *

v = float(input("Velocidade inicial: "))
a = radians(float(input("Angulo co o solo: ")))
D = float(input("Distancia entre passaro e porco: "))
g = 9.8

R = ((v ** 2) * sin(2 * a)) / g

if (abs(R - D) <=0.1):
	print ("sim")
else:
	print ("nao")
-- EXECUTION TIME:
0.150038
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
